slurm-13404093.out
quake1.c: In function 'main':
quake1.c:164:5: error: too many arguments to function 'omp_get_num_threads'
     numthreads=omp_get_num_threads(16);
     ^
In file included from quake1.c:11:0:
/export/rel60_shadow/glue.umd.edu/software/gcc/4.8.1/.amd64_rel60/lib/gcc/x86_64-unknown-linux-gnu/4.8.1/include/omp.h:63:12: note: declared here
 extern int omp_get_num_threads (void) __GOMP_NOTHROW;
            ^
quake: Reading nodes.
quake: Reading elements.
quake: Reading sparse matrix structure.
./quake1: Beginning simulation.

CASE SUMMARY
Fault information
  Orientation:  strike: 1.937315
                   dip: 0.767945
                  rake: 1.221730
           dislocation: 29.640788 cm
Hypocenter: (32.264153, 23.814432, -11.250000) Km
Excitation characteristics
     Time step: 0.002400 sec
      Duration: 9.250000 sec
     Rise time: 0.600000 sec

*** glibc detected *** ./quake1: munmap_chunk(): invalid pointer: 0x00000000010cc2a0 ***
/export/software/slurm/spool/slurmd/job13404093/slurm_script: line 20: 26022 Segmentation fault      (core dumped) ./quake1 < quake.in
/export/software/slurm/spool/slurmd/job13404093/slurm_script: line 22: analysis_16.txt: cannot overwrite existing file
